--- a/GroupB_Project/Views/ScheduledSessions/Create.cshtml
+++ b/GroupB_Project/Views/ScheduledSessions/Create.cshtml
@@ -11,70 +11,70 @@
 
 
 <h1>Schedule Session</h1>
+<div class="border p-3"></div>
+<form asp-action="Create">
+
+    <div class="row">
+
+        <div class="col-12>
+            <div class="form-group row">
 
 
 
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+                <div class="form-group">
 
-<hr />
+                    <label asp-for="ScheduledDateStart" class="control-label"></label>
 
-<div class="row">
+                    <input asp-for="ScheduledDateStart" class="form-control" />
 
-    <div class="col-md-4">
+                    <span asp-validation-for="ScheduledDateStart" class="text-danger"></span>
 
-        <form asp-action="Create">
+                </div>
 
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
 
-            <div class="form-group">
+                    <label asp-for="Subject" class="control-label"></label>
 
-                <label asp-for="ScheduledDateStart" class="control-label"></label>
+                    <input asp-for="Subject" class="form-control" />
 
-                <input asp-for="ScheduledDateStart" class="form-control" />
+                    <span asp-validation-for="Subject" class="text-danger"></span>
 
-                <span asp-validation-for="ScheduledDateStart" class="text-danger"></span>
+                </div>
 
+                <div class="form-group">
+
+                    <label asp-for="Location" class="control-label"></label>
+
+                    <input asp-for="Location" class="form-control" />
+
+                    <span asp-validation-for="Location" class="text-danger"></span>
+
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-8 offset-2 row">
+                        <div class="col">
+                            <input type="submit" value="Schedule" class="btn btn-primary w=75" />
+                        </div>
+                        <div class="col">
+                            <a asp-action="Index" class="btn btn-danger w-75">Back to List</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="form-group">
-
-                <label asp-for="Subject" class="control-label"></label>
-
-                <input asp-for="Subject" class="form-control" />
-
-                <span asp-validation-for="Subject" class="text-danger"></span>
-
-            </div>
-
-            <div class="form-group">
-
-                <label asp-for="Location" class="control-label"></label>
-
-                <input asp-for="Location" class="form-control" />
-
-                <span asp-validation-for="Location" class="text-danger"></span>
-
-            </div>
-
-            <div class="form-group">
-
-                <input type="submit" value="Schedule" class="btn btn-primary" />
-
-            </div>
-
-        </form>
+        </div>
 
     </div>
 
-</div>
+
+</form>
+
+ 
 
 
 
-<div>
-
-    <a asp-action="Index">Back to List</a>
-
-</div>
 
 
 
@@ -83,3 +83,9 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
 }
+
+
+
+
+
+
