--- a/GroupB_Project/Views/ScheduledSessions/Create.cshtml
+++ b/GroupB_Project/Views/ScheduledSessions/Create.cshtml
@@ -1,91 +1,48 @@
 ﻿@model GroupB_Project.Models.ScheduledSession
 
 
-
-@{
-
-    ViewData["Title"] = "Create";
-
-}
-
-
-
-<h1>Schedule Session</h1>
-<div class="border p-3"></div>
-<form asp-action="Create">
-
-    <div class="row">
-
-        <div class="col-12>
-            <div class="form-group row">
-
-
-
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                <div class="form-group">
-
-                    <label asp-for="ScheduledDateStart" class="control-label"></label>
-
-                    <input asp-for="ScheduledDateStart" class="form-control" />
-
-                    <span asp-validation-for="ScheduledDateStart" class="text-danger"></span>
-
+<form method="post" asp-action="Create">
+    <div class="border p-3">
+        <div class="form-group row">
+            <h2 class="text-black-50 pl-3 align-content-center">Schedule The Next Session</h2>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="ScheduledDateStart" class="control-label"></label>
+                    </div>
+                    <div class="col-4">
+                        <label asp-for="Subject" class="control-label"></label>
+                    </div>
+                    <div class="col-4">
+                        <label asp-for="Location" class="control-label"></label>
+                    </div>
                 </div>
-
-                <div class="form-group">
-
-                    <label asp-for="Subject" class="control-label"></label>
-
-                    <input asp-for="Subject" class="form-control" />
-
-                    <span asp-validation-for="Subject" class="text-danger"></span>
-
+                <div class="form-group row">
+                    <div class="col-4">
+                        <input asp-for="ScheduledDateStart" class="form-control" />
+                    </div>
+                    <div class="col-4">
+                        <input asp-for="Subject" class="form-control" />
+                    </div>
+                    <div class="col-4">
+                        <input asp-for="Location" class="form-control" />
+                    </div>
                 </div>
-
-                <div class="form-group">
-
-                    <label asp-for="Location" class="control-label"></label>
-
-                    <input asp-for="Location" class="form-control" />
-
-                    <span asp-validation-for="Location" class="text-danger"></span>
-
-                </div>
-
                 <div class="form-group row">
                     <div class="col-8 offset-2 row">
                         <div class="col">
-                            <input type="submit" value="Schedule" class="btn btn-primary w=75" />
+                            <input type="submit" value="Schedule" class="btn btn-primary w=100" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-danger w-75">Back to List</a>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
-
     </div>
-
-
 </form>
-
- 
-
-
-
-
-
-
-@section Scripts {
-
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-}
-
-
-
-
-
 
